--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-# OpenWeatherMap API Key
-weather_api_key = "c9125e5029737a5a2d19cc94a794d718"
-
-# Geoapify API Key
-geoapify_key = "cf7c0762d5e34616a19b1495fd9d1b5a"
+api_keys.py
